edited footer and navbar layouts

--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,11 @@
-<div class="footer">
-  <p jhiTranslate="footer">This is your footer</p>
+<div class="footer" style="display: flex; justify-content: center; align-items: center; height: 20px" *ngIf="shouldShowFooter()">
+  <a class="alert-link" style="text-align: center" (click)="loadGDPR()">View our GDPR Policy</a>
+</div>
+<div>
+  <p jhiTranslate="footer">
+    Alpha Project Disclaimer This server is provided by the School of Computer Science at the University of Birmingham to allow users to
+    provide feedback on software developed by students as part of an assignment. While we take reasonable precautions, we cannot guarantee
+    the security of the data entered into the system. Do NOT enter any real personal data (e.g., financial information or otherwise) into
+    the system. The assignment runs until May 31st 2023, at which time the server and all associated data will be destroyed.
+  </p>
 </div>
