--- a/src/main/webapp/app/home/home.component.scss
+++ b/src/main/webapp/app/home/home.component.scss
@@ -2,13 +2,14 @@
 Main page styles
 ========================================================================== */
 
-.hipster {
+/*.hipster {
   display: inline-block;
   width: 347px;
   height: 497px;
-  background: url('../../content/images/jhipster_family_member_0.svg') no-repeat center top;
+  background: url('../../content/images/MoneyMavenlogo.png') no-repeat center top;
   background-size: contain;
-}
+
+}*/
 
 /* wait autoprefixer update to allow simple generation of high pixel density media query */
 @media only screen and (-webkit-min-device-pixel-ratio: 2),
