added copyright message in footer

--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -8,4 +8,5 @@
     the security of the data entered into the system. Do NOT enter any real personal data (e.g., financial information or otherwise) into
     the system. The assignment runs until May 31st 2023, at which time the server and all associated data will be destroyed.
   </p>
+  <p style="display: flex; justify-content: center; align-items: center; height: 20px">Copyright © MoneyMaven All Rights Reserved.</p>
 </div>
