Expense Screen Latest Changes

--- a/src/main/webapp/app/entities/expenses/update/expenses-update.component.html
+++ b/src/main/webapp/app/entities/expenses/update/expenses-update.component.html
@@ -24,7 +24,7 @@
             <option value="Discretionary">Discretionary</option>
             <option value="Savings & Investment">Savings & Investment</option>
             <option value="Debt Repayment">Debt Repayment</option>
-            <option value="OtherY">Other</option>
+            <option value="Other">Other</option>
           </select>
 
           <div *ngIf="editForm.get('expenseType')!.invalid && (editForm.get('expenseType')!.dirty || editForm.get('expenseType')!.touched)">
