--- a/src/main/webapp/app/entities/income/update/income-update.component.html
+++ b/src/main/webapp/app/entities/income/update/income-update.component.html
@@ -1,9 +1,7 @@
 <div class="d-flex justify-content-center">
   <div class="col-8">
     <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
-      <h2 id="jhi-income-heading" data-cy="IncomeCreateUpdateHeading" jhiTranslate="teamprojectApp.income.home.createOrEditLabel">
-        Create or edit a Income
-      </h2>
+      <h2 id="jhi-income-heading" data-cy="IncomeCreateUpdateHeading">Add a new income</h2>
 
       <div>
         <jhi-alert-error></jhi-alert-error>
@@ -27,7 +25,17 @@
         </div>
 
         <div class="row mb-3">
-          <label class="form-label" jhiTranslate="teamprojectApp.income.companyName" for="field_companyName">Company Name</label>
+          <label class="form-label" jhiTranslate="teamprojectApp.income.currency" for="field_currency">Currency</label>
+          <select class="form-control" name="currency" formControlName="currency" id="field_currency" data-cy="currency">
+            <option [ngValue]="null">{{ 'teamprojectApp.Currency.null' | translate }}</option>
+            <option *ngFor="let currency of currencyValues" [value]="currency">
+              {{ 'teamprojectApp.Currency.' + currency | translate }}
+            </option>
+          </select>
+        </div>
+
+        <div class="row mb-3">
+          <label class="form-label" for="field_companyName">Reference</label>
           <input
             type="text"
             class="form-control"
@@ -64,23 +72,13 @@
           </div>
         </div>
 
-        <div class="row mb-3">
-          <label class="form-label" jhiTranslate="teamprojectApp.income.currency" for="field_currency">Currency</label>
-          <select class="form-control" name="currency" formControlName="currency" id="field_currency" data-cy="currency">
-            <option [ngValue]="null">{{ 'teamprojectApp.Currency.null' | translate }}</option>
-            <option *ngFor="let currency of currencyValues" [value]="currency">
-              {{ 'teamprojectApp.Currency.' + currency | translate }}
-            </option>
-          </select>
-        </div>
-
-        <div class="row mb-3">
+        <!-- <div class="row mb-3">
           <label class="form-label" jhiTranslate="teamprojectApp.income.user" for="field_user">User</label>
           <select class="form-control" id="field_user" data-cy="user" name="user" formControlName="user" [compareWith]="compareUser">
             <option [ngValue]="null"></option>
             <option [ngValue]="userOption" *ngFor="let userOption of usersSharedCollection">{{ userOption.login }}</option>
           </select>
-        </div>
+        </div>-->
       </div>
 
       <div>
