--- a/src/main/webapp/app/home/home.component.scss
+++ b/src/main/webapp/app/home/home.component.scss
@@ -123,3 +123,121 @@ Main page styles
   margin: auto;
   transition: 0.3s ease;
 }
+
+#content {
+  //width: calc(100% - 240px);
+  height: 100%;
+  padding: 25px;
+  display: table-cell;
+}
+#titleBar {
+  height: 36px;
+  margin-bottom: 30px;
+  margin-right: -15px;
+}
+#titleBar h1 {
+  font-weight: 300;
+  font-size: xx-large;
+}
+#titleBar h2 {
+  font-size: x-large;
+}
+
+ul.menu li:hover .notification {
+  transition: 0.3s ease;
+}
+
+/* Table */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 10px;
+}
+th {
+  text-align: left;
+  font-weight: 400;
+  font-size: 22px;
+  text-transform: uppercase;
+  padding: 0 10px;
+  padding-bottom: 14px;
+}
+tr:not(:first-child):hover {
+}
+td {
+  height: 40px;
+  line-height: 40px;
+  font-size: larger;
+  font-weight: 300;
+  padding: 0 10px;
+}
+/* Headers */
+
+h3 {
+  float: left;
+  font-size: 32px;
+  font-weight: 300;
+  margin: 0;
+  width: 200px;
+}
+
+h4 {
+  float: left;
+  font-size: 32px;
+  font-weight: 100;
+  margin: 0;
+  width: 200px;
+}
+
+h5 {
+  float: left;
+  font-size: 32px;
+  font-weight: 100;
+  margin: 0;
+  width: 200px;
+}
+
+h6 {
+  float: left;
+  font-size: 32px;
+  font-weight: 100;
+  margin: 0;
+  width: 200px;
+}
+
+#salesData {
+  margin-bottom: 60px;
+}
+#totalSales {
+  height: 120px;
+  position: relative;
+  margin-top: 24px;
+  margin-bottom: 50px;
+}
+#totalSales .col {
+  float: left;
+  width: 33.33%;
+  height: 100%;
+}
+#totalSales .col .progressTitle {
+  float: left;
+  margin: 0;
+  margin-top: 50%;
+  margin-left: -60px;
+  margin-bottom: 6px;
+  font-weight: 300;
+}
+.progressTitle {
+  font-size: x-large;
+}
+.progressBar {
+  float: left;
+  height: 120px;
+  width: 120px;
+  font-size: 40px;
+  text-align: left;
+  line-height: 120px;
+}
+
+.clearFix {
+  clear: both;
+}
