income screen updated

--- a/src/main/webapp/app/entities/income/detail/income-detail.component.html
+++ b/src/main/webapp/app/entities/income/detail/income-detail.component.html
@@ -31,10 +31,10 @@
           <span>{{ income.date | formatMediumDate }}</span>
         </dd>
 
-        <!-- <dt><span jhiTranslate="teamprojectApp.income.user">User</span></dt>
+        <dt><span jhiTranslate="teamprojectApp.income.user">User</span></dt>
         <dd>
           <span>{{ income.user?.login }}</span>
-        </dd>-->
+        </dd>
       </dl>
 
       <button type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
