--- a/src/main/webapp/app/entities/income/update/income-update.component.html
+++ b/src/main/webapp/app/entities/income/update/income-update.component.html
@@ -72,13 +72,12 @@
           </div>
         </div>
 
-        <!-- <div class="row mb-3">
+        <div class="row mb-3">
           <label class="form-label" jhiTranslate="teamprojectApp.income.user" for="field_user">User</label>
           <select class="form-control" id="field_user" data-cy="user" name="user" formControlName="user" [compareWith]="compareUser">
-            <option [ngValue]="null"></option>
-            <option [ngValue]="userOption" *ngFor="let userOption of usersSharedCollection">{{ userOption.login }}</option>
+            <option [ngValue]="userOption" *ngFor="let userOption of usersSharedCollection">{{ currentUser.login }}</option>
           </select>
-        </div>-->
+        </div>
       </div>
 
       <div>
