--- a/src/main/webapp/app/home/home.component.scss
+++ b/src/main/webapp/app/home/home.component.scss
@@ -189,19 +189,19 @@ h4 {
 }
 
 h5 {
-  float: left;
-  font-size: 32px;
-  font-weight: 100;
-  margin: 0;
-  width: 200px;
+  //float: left;
+  font-size: x-large;
+  font-weight: 400;
+  //margin: 0;
+  //width: 200px;
 }
 
 h6 {
-  float: left;
-  font-size: 32px;
-  font-weight: 100;
-  margin: 0;
-  width: 200px;
+  //float: left;
+  font-size: 23px;
+  font-weight: 200;
+  //margin: 0;
+  //width: 200px;
 }
 
 #salesData {
