--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -65,8 +65,8 @@
           <h3>${{ totalMonthlyExpenses }}</h3>
         </div>
         <div class="col">
-          <h4>Budget</h4>
-          <h3>$XXXXXX</h3>
+          <h4>Balance</h4>
+          <h3>${{ totalMonthlyIncome - totalMonthlyExpenses }}</h3>
         </div>
       </div>
 
